--- a/PropertyManagementApp/Web.config
+++ b/PropertyManagementApp/Web.config
@@ -116,6 +116,9 @@
       <setting name="GeoCodeApiKey" serializeAs="String">
         <value>AIzaSyDBQ0bI2v5FnfmC4o7RgWX9af9u03U-PDU	</value>
       </setting>
+      <setting name="MailGunApiKey" serializeAs="String">
+        <value>key-158011c7a1c26856d0366693f45ecf53</value>
+      </setting>
     </PropertyManagementApp.Properties.Settings>
   </applicationSettings>
 </configuration>
