--- a/PropertyManagementApp/Web.config
+++ b/PropertyManagementApp/Web.config
@@ -113,7 +113,12 @@
   </system.codedom>
   <applicationSettings>
     <PropertyManagementApp.Properties.Settings>
-     
+      <setting name="GeoCodeApiKey" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="MailGunApiKey" serializeAs="String">
+        <value />
+      </setting>
     </PropertyManagementApp.Properties.Settings>
   </applicationSettings>
 </configuration>
