--- a/PropertyManagementApp/packages.config
+++ b/PropertyManagementApp/packages.config
@@ -36,8 +36,9 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="PayPal" version="1.9.1" targetFramework="net461" />
   <package id="Respond" version="1.4.2" targetFramework="net461" />
-  <package id="RestSharp" version="106.0.0" targetFramework="net461" />
+  <package id="RestSharp" version="106.0.1" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.3" targetFramework="net461" />
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net461" />
