--- a/PropertyManagementApp/Web.config
+++ b/PropertyManagementApp/Web.config
@@ -6,12 +6,23 @@
 <configuration>
   <configSections>
     
+    <section name="paypal" type="PayPal.SDKConfigHandler, PayPal" />
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="PropertyManagementApp.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
-                                                                                                                      </configSections>
+  </configSections>
+  
+    <!-- PayPal SDK settings -->
+  <paypal>
+    <settings>
+      <add name="mode" value="sandbox" />
+      <add name="clientId" value="__CLIENT_ID__" />
+      <add name="clientSecret" value="__CLIENT_SECRET__" />
+    </settings>
+  </paypal>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-PropertyManagementApp-20171103082532.mdf;Initial Catalog=aspnet-PropertyManagementApp-20171103082532;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
