--- a/PropertyManagementApp/packages.config
+++ b/PropertyManagementApp/packages.config
@@ -3,6 +3,8 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="Google.Apis" version="1.30.0" targetFramework="net461" />
+  <package id="Google.Apis.Core" version="1.30.0" targetFramework="net461" />
   <package id="jQuery" version="3.2.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.4.0" targetFramework="net461" />
