--- a/PropertyManagementApp/PropertyManagementApp.csproj
+++ b/PropertyManagementApp/PropertyManagementApp.csproj
@@ -431,6 +431,10 @@
     <Compile Include="Migrations\201711132126495_Add UserId to resident model.Designer.cs">
       <DependentUpon>201711132126495_Add UserId to resident model.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711152029341_add current column to resident model.cs" />
+    <Compile Include="Migrations\201711152029341_add current column to resident model.Designer.cs">
+      <DependentUpon>201711152029341_add current column to resident model.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\AvailableUnitInfoRequests.cs" />
@@ -457,7 +461,6 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\bootstrap-flatly.css" />
     <Content Include="Content\PagedList.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -720,6 +723,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711132126495_Add UserId to resident model.resx">
       <DependentUpon>201711132126495_Add UserId to resident model.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711152029341_add current column to resident model.resx">
+      <DependentUpon>201711152029341_add current column to resident model.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
